--- a/Selenium/billboard-indebugging/requirements.txt
+++ b/Selenium/billboard-indebugging/requirements.txt
@@ -32,7 +32,7 @@ conda-build==3.0.27
 conda-verify==2.0.0
 constantly==15.1.0
 contextlib2==0.5.5
-cryptography==2.0.3
+cryptography>=2.3
 cssselect==1.0.3
 cycler==0.10.0
 Cython==0.26.1
@@ -84,7 +84,7 @@ MarkupSafe==1.0
 matplotlib==2.1.0
 mccabe==0.6.1
 menuinst==1.4.10
-mistune==0.7.4
+mistune>=0.8.1
 mpmath==0.19
 msgpack-python==0.4.8
 multipledispatch==0.4.9
@@ -94,7 +94,7 @@ nbformat==4.4.0
 networkx==2.0
 nltk==3.2.4
 nose==1.3.7
-notebook==5.0.0
+notebook>=5.7.2
 numba==0.35.0+10.g143f70e
 numexpr==2.6.2
 numpy==1.13.3
@@ -131,7 +131,7 @@ pyflakes==1.6.0
 Pygments==2.2.0
 pylint==1.7.4
 pyodbc==4.0.17
-pyOpenSSL==17.2.0
+pyOpenSSL>=17.5.0
 pyparsing==2.2.0
 PySocks==1.6.7
 pytest==3.2.1
@@ -139,14 +139,14 @@ python-dateutil==2.6.1
 pytz==2017.2
 PyWavelets==0.5.2
 pywin32==221
-PyYAML==3.12
+PyYAML>=4.2b1
 pyzmq==16.0.2
 QtAwesome==0.4.4
 qtconsole==4.3.1
 QtPy==1.3.1
 queuelib==1.4.2
-requests==2.18.4
-rope==0.10.5
+requests>=2.20.0
+rope>=0.11.0
 ruamel-yaml==0.11.14
 scikit-image==0.13.0
 scikit-learn==0.19.1
@@ -176,7 +176,7 @@ traitlets==4.3.2
 Twisted==17.9.0
 typing==3.6.2
 unicodecsv==0.14.1
-urllib3==1.22
+urllib3>=1.23
 w3lib==1.18.0
 wcwidth==0.1.7
 webencodings==0.5.1
